[gd_scene load_steps=5 format=3 uid="uid://b1tbv4v37ohbj"]

[ext_resource type="Theme" uid="uid://crvqg7mgreege" path="res://theme.tres" id="1_istn8"]
[ext_resource type="Script" path="res://assets/scripts/main_menu.gd" id="1_ss2us"]
[ext_resource type="Texture2D" uid="uid://dkv5cq2to1ucm" path="res://assets/textures/fondo2.png" id="3_1sjhj"]
[ext_resource type="Texture2D" uid="uid://lg4l4unqnbc1" path="res://assets/textures/MainTitle.png" id="3_2p7rw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_istn8")
script = ExtResource("1_ss2us")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1sjhj")
expand_mode = 1

[node name="MainTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.522
offset_left = 13.0
offset_top = 23.0
offset_right = -12.0
offset_bottom = 28.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2p7rw")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.964
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 535.0
offset_right = -82.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
